Fixed the overflow settings

--- a/collective/ptg/galleria/resources/classic.css
+++ b/collective/ptg/galleria/resources/classic.css
@@ -4,12 +4,12 @@
  * Licensed under the MIT license.
  */
  
- #galleria-loader{height:1px!important}
+#galleria-loader{height:1px!important}
  
 .galleria-container {
     position: relative;
-    overflow: hidden;
     background: #000;
+    z-index: 2;
 }
 .galleria-container img {
     -moz-user-select: none;
